perf: optimize event handlers